dfir_rs/tests/compile-fail-stable/surface_join_persistence_bad.rs
../compile-fail/surface_join_persistence_bad.rs